--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         <p>Full-stack Developer tương lai | Đam mê E-sports & Design</p>
     </header>
 
+<div style="text-align: center; margin-top: 2rem;">
+    <a href="lantern.html" style="
+        display: inline-block; 
+        padding: 10px 20px; 
+        background-color: #ff0000; 
+        color: white; 
+        text-decoration: none; 
+        border-radius: 5px; 
+        font-weight: bold;">
+        👉 Xem Đèn Kéo Quân
+    </a>
+</div>
+
     <section>
         <h2>Dự án nổi bật</h2>
         <div class="project">Áo thi đấu</div>
